@@ -1,5 +1,10 @@
 2013-03-06  Xavi Artigas  <xartigas@fluendo.com>
 
+	* examples/multidl.c: (data_cb), (main):
+	  - Update example with mixed file/HTTP downloads.
+
+2013-03-06  Xavi Artigas  <xartigas@fluendo.com>
+
 	* lib/fludownloader.c: (_schedule_tasks), (fludownloader_new_task):
 	  - Do not allow file:// downloads to be overlapped with HTTP ones, since
 	    packets arrive much earlier and therefore out-of-order.
